Resolving comment, adding: db`s backup (snapshot), db`s versions, dockerfile for initialization spring maven application + docker-compose.yml